added total print and print type